fix buttons alignment

--- a/imports/plugins/included/default-theme/client/styles/buttonSelect.less
+++ b/imports/plugins/included/default-theme/client/styles/buttonSelect.less
@@ -54,9 +54,9 @@
     text-align: center;
 }
 
-.button-select .button-dropdown .button-item:hover {
-    background: #f5f5f5;
-}
+// .button-select .button-dropdown .button-item:hover {
+//     background: #f5f5f5;
+// }
 
 .show {
     display: block;
