--- a/imports/plugins/included/default-theme/client/styles/dashboard/console.less
+++ b/imports/plugins/included/default-theme/client/styles/dashboard/console.less
@@ -2,6 +2,13 @@
   color: @brand-success;
 }
 
+.fa-eye, .fa-archive, .fa-undo, .fa-plus, .fa-bell,{
+  color: rgb(70, 178, 157);
+}
+
+.fa-search {
+  color: rgb(70, 178, 157);
+}
 html.rtl .rui.admin.action-view {
   border-right: 1px solid @black10;
 }
@@ -14,7 +21,7 @@ html:not(.rtl) .rui.admin.action-view {
   .display(flex);
   .flex(0 0 auto);
   height: 100%;
-  background-color: @white;
+  background-color: #47B25D;
   width: 0;
   overflow: hidden;
   .transition(width 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955));
