--- a/imports/plugins/included/default-theme/client/styles/navbar.less
+++ b/imports/plugins/included/default-theme/client/styles/navbar.less
@@ -257,7 +257,7 @@ html:not(.rtl) .rui.navbar .languages .dropdown-menu {
 }
 
 .rui.btn-default.flat {
-  color: white;
+  color: #46B29D;
 }
 
 .rui.btn-default.flat:hover {
