--- a/imports/plugins/included/default-theme/client/styles/products/productDetail.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productDetail.less
@@ -222,15 +222,13 @@
 
 // Add to cart button
 .pdp.add-to-cart {
-  display: flex;
   width: 100%;
   height: 44px;
 }
 
 .pdp.add-to-cart input {
   flex: 0 0 auto;
-  min-width: 30px;
-  max-width: 50px;
+  width: 100%;
   height: 100%;
   border-radius: @border-radius-base 0 0 @border-radius-base;
   border: 1px solid lighten(@btn-cta-border, 10%);
@@ -245,6 +243,8 @@
 
 .pdp.add-to-cart button {
   flex: 1 1 auto;
+  width: 100%;
+  height: 100%;
   border-radius: 0 @border-radius-base @border-radius-base 0;
   border: 1px solid #46B29D;
   background-color: #46B29D;
